--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 before_script:
   - bundle install --jobs=3 --retry=3
   - yarn
+  - psql -c 'createuser -d amitree-take-home-api;' -U postgres
   - bundle exec rake db:create
   - bundle exec rake db:schema:load
 script:
