--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 before_script:
   - bundle install --jobs=3 --retry=3
   - yarn
-  - psql -c 'createuser amitree-take-home-api;' -U postgres
+  - psql -c "CREATE USER amitree-take-home-api WITH PASSWORD '';" -U postgres
   - bundle exec rake db:create
   - bundle exec rake db:schema:load
 script:
